@@ -39,7 +39,7 @@ var col_background="#ffffff";
 			<div id="navconmeasure"></div>
 		</div>
 		<div id="content" class="background">
-			<h2 id="website-slogan" class="secondary">Overview</h2>
+			<h2 id="website-slogan" class="secondary">Future</h2>
 			<div id="sloganmeasure" class="clearer"></div>
 			<table id="content-table">
         	 	<tr>
@@ -52,55 +52,49 @@ var col_background="#ffffff";
 <table border="0" name="" width="100%" cellpadding="5" cellspacing="0">
 <tr align="" valign="">
 <td colspan="1" rowspan="1" width="100%" align="" valign="top">
-  <p>FURM consists of 4 fundamental guidelines:
-    <ol type="1">
-      <li>Standardize interfaces to multi-paradigm, multi-mode, and
-        cross-trophic models, </li>
-      <li>use discrete interactions, </li>
-      <li>design for an extended life cycle, and </li>
-      <li>define observables that will submit to a similarity measure</li>
-    </ol>
-  </p>
 
-  <p>These four fundamental guidelines flow down into the following more concrete behaviors (principles) that constitute the modeling of functional units.</p>
 
-  <ul>
-    <li><h3>Iterative Modeling</h3>
-      <p>Every model should be under continual evolution.  There is no optimal (finished) model.</p>
-    </li>
 
-    <li><h3>Model Comparison/Contrast</h3>
-      <p>Isolated models are nonsense.  They only make sense in relation, comparison, and contrast to other models.</p>
-    </li>
+    <p>FURM is basic research.  The project's goals are aggressive and
+      even if it succeeds, it is likely to change drastically as we
+      develop it.  In addition, it is clear that there are many
+      related research paths to be explored.  Some of those paths
+      involve the application of techniques that are successful in
+      other disciplines (like fuzzy systems), some involve building
+      bridges between seemingly incommensurate techniques (like
+      between mathematical modeling and agent-based modeling), and
+      some involving esoteric topics (like automata theory).  As such,
+      it's difficult to tell where it will end up or what might spin
+      off of work being done on it.</p>
 
-    <li><h3>V&V</h3>
-      <p>Every component of a model should be open to validation (data permitting) based on clearly defined measures.  Verification should be limited to the examination of networks of validatable components.</p>
-    </li>
+    <p>However, the goals are clear enough to derive near- and
+      medium-term objectives and requirements.  The management of the
+      project toward those objectives will follow the same philosophy
+      as the FURM method, itself.  It will be integrative, extensible,
+      and open-ended.  The point is not to dive down deep and develop
+      any one technique, model, or technology.  The point is to
+      provide as much context and navigability to the practice of
+      biological modeling as possible.  This means pointing out and
+      facilitating the relationships between the many different tools
+      and methods used and discovered by biological modelers.  The end
+      result will be a web or <strong>network</strong> of techniques
+      that improve the efficacy and efficiency of a modeling effort,
+      regardless of the particular domain.</p>
 
-    <li><h3>Aspect-Oriented Modeling</h3>
-      <p>Models must be capable of representing multiple, possiblyincommensurate,perspectives.</p>
-    </li>
+    <p>The current near-term objective is to use FURM (as it stands)
+      to continue developing the ISL so that it can adequately
+      account for, and possibly predict, the dynamics of the liver as
+      it processes incoming blood.  The milestones toward that
+      objective consist primarily of building a mechanism for
+      searching and analyzing the space of <strong>possible</strong>
+      models of liver dynamics and structure (biotic and abiotic,
+      healthy and diseased).  If FURM can bring the ISL to this
+      point, then it will have demonstrated its usefulness and
+      feasibility.</p>
 
-    <li><h3>Arbitrary Functional Granularity</h3>
-      <p>The composition of any system can be dynamic or open to interpretation.  Hence fixed compositional attributes (like hierarchy) are always weak points in any given model. If a model preserves the ability to re-specify or re-interpret its functional granularity, these weak points are hardened.</p>
-    </li>
 
-    <li><h3>Experimental Procedure Encapsulation</h3>
-      <p>Capture experimental procedures in an unambiguous way so that different experiments give similarly formatted results and are easily repeatable, preferably automatically repeatable and extensible.</p>
-    </li>
 
-    <li><h3>Multiple Models</h3>
-      <p>Always run multiple models, in tandem, of the same referent.</p>
-    </li>
 
-    <li><h3>Automated Model Generation</h3>
-      <p>Build mechanisms to automate (or at least assist in) the generation of new models.</p>
-    </li>
-
-    <li><h3>Experimental Computing</h3>
-      <p>Treat any computational process as if it were a black box with an impenetrable boundary around it.</p>
-    </li>
-  </ul>
           
 </td>
 </tr>
